k3s/template-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: ghcr.io/yoann-tyt/express-brains/app:VERSION
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: nom-du-secret
