k3s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingressClass: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd

spec:
  rules:
    - host: express-brains.chocteau.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-service
                port:
                  number: 80
  tls:
    - secretName: express-brains-tls
      hosts:
        - express-brains.chocteau.dev
